@@ -1,0 +1,29 @@
+<html>
+<head>
+    <title>title</title>
+    <meta name="description" content="meta.description">
+    <meta name="keywords" content="meta.keywords">
+    <meta name="author" content="meta.author">
+
+    <link rel='canonical' href='http://example.com/meta/rel=canonical' />
+    <link rel='shortlink' href='http://example.com/meta/rel=shortlink' />
+
+    <meta property="article:publisher" content="https://www.example.com/meta/property=article:publisher" />
+    <meta property="og:site_name" content="meta.property=og:site_name" />
+    <meta property="og:title" content="meta.property=og:title" />
+    <meta property="og:description" content="meta.property=og:description" />
+    <meta property="og:image" content="https://www.example.com/meta/property=og:image" />
+    <meta property="og:url" content="https://www.example.com/meta/property=og:url" />
+    <meta property="og:type" content="meta.property=og:type" />
+
+    <meta name='twitter:card' content='meta.name=twitter:card' />
+    <meta name='twitter:image:src' content='https://example.com/meta/name=twitter:image:src' />
+    <meta name='twitter:site' content='meta.name=twitter:site' />
+    <meta name='twitter:url' content='https://example.com/meta/name=twitter:url' />
+    <meta name='twitter:description' content='meta.name=twitter:description' />
+    <meta name='twitter:title' content='meta.name=twitter:title' />
+</head>
+<body>
+body
+</body>
+</html>
