@@ -137,3 +137,100 @@ class TestUrlParsing(unittest.TestCase):
             self.assertFalse(metadata_parser.is_parsed_valid_url(parsed, require_public_netloc=True, allow_localhosts=False))
             self.assertTrue(metadata_parser.is_parsed_valid_url(parsed, require_public_netloc=False, allow_localhosts=True))
 
+
+class TestAbsoluteUpgrades(unittest.TestCase):
+    """
+    python -m unittest tests.url_parsing.TestAbsoluteUpgrades
+    
+    Ensures URLs are parsed correctly as valid/invalid
+    """
+
+    def test_none_returns_none(self):
+        absolute = metadata_parser.url_to_absolute_url(None, url_fallback=None)
+        self.assertEquals(absolute, None)
+
+    def test_nothing(self):
+        absolute = metadata_parser.url_to_absolute_url('http://example.com', url_fallback='http://example.com')
+        self.assertEquals(absolute, 'http://example.com')
+
+    def test_upgrade(self):
+        absolute = metadata_parser.url_to_absolute_url('a.html', url_fallback='http://example.com')
+        self.assertEquals(absolute, 'http://example.com/a.html')
+
+    def test_fallback(self):
+        absolute = metadata_parser.url_to_absolute_url(None, url_fallback='http://example.com')
+        self.assertEquals(absolute, 'http://example.com')
+        
+
+class TestDocumentCanonicals(unittest.TestCase):
+    """
+    python -m unittest tests.url_parsing.TestDocumentCanonicals
+    """
+    
+    def _MakeOne(self, url):
+        """generates a canonical document"""
+        doc_base = """<html><head>%(head)s</head><body></body></html>"""
+        canonical_base = """<link rel='canonical' href='%(canonical)s' />"""
+        _canonical_html = canonical_base % {'canonical': url, }
+        _doc_html = doc_base % {'head': _canonical_html, }
+        return _doc_html
+
+    def test_canonical_simple(self):
+        """someone did their job"""
+        url = None
+        rel_canonical = 'https://example.com/canonical'
+        rel_expected = 'https://example.com/canonical'
+        html_doc = self._MakeOne(rel_canonical)
+        parsed = metadata_parser.MetadataParser(url=url, html=html_doc)
+        parsed_url = parsed.get_discrete_url()
+        self.assertEquals(parsed_url, rel_expected)
+
+    def test_canonical_upgrade(self):
+        """someone else did their job. not as good, but did their job"""
+        url = 'https://example.com'
+        rel_canonical = '/canonical'
+        rel_expected = 'https://example.com/canonical'
+        html_doc = self._MakeOne(rel_canonical)
+        parsed = metadata_parser.MetadataParser(url=url, html=html_doc)
+        parsed_url = parsed.get_discrete_url()
+        self.assertEquals(parsed_url, rel_expected)
+
+    def test_upgrade_invalid_root(self):
+        """
+        you had one job...
+        """
+        url = 'https://example.com'
+        rel_canonical = 'http://localhost:8080'
+        rel_expected = 'https://example.com'
+        html_doc = self._MakeOne(rel_canonical)
+        parsed = metadata_parser.MetadataParser(url=url, html=html_doc)
+        parsed_url = parsed.get_discrete_url()
+        self.assertEquals(parsed_url, rel_expected)
+
+    def test_upgrade_invalid_file(self):
+        """
+        you had one job...
+        if someone lists the canonical as an invalid domain, remount the right domain
+
+        python -m unittest tests.url_parsing.TestDocumentCanonicals.test_upgrade_invalid_file
+        """
+        url = 'https://example.com/a'
+        rel_canonical = 'http://localhost:8080'
+        rel_expected = 'https://example.com'
+        html_doc = self._MakeOne(rel_canonical)
+        parsed = metadata_parser.MetadataParser(url=url, html=html_doc)
+        parsed_url = parsed.get_discrete_url()
+        self.assertEquals(parsed_url, rel_expected)
+
+    def test_upgrade_invalid_file_b(self):
+        """
+        you had one job...
+        if someone lists the canonical as a different file on an invalid domain, remount the right domain
+        """
+        url = 'https://example.com/a'
+        rel_canonical = 'http://localhost:8080/b'
+        rel_expected = 'https://example.com/b'
+        html_doc = self._MakeOne(rel_canonical)
+        parsed = metadata_parser.MetadataParser(url=url, html=html_doc)
+        parsed_url = parsed.get_discrete_url()
+        self.assertEquals(parsed_url, rel_expected)
